CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- The ippAddXYZ functions no longer allow the
	  application to add less than 1 value.
	- Fixed a URL rewrite bug in the web interface - local
	  access was sometimes redirected away from localhost...
	- The ppdOpen() functions could get in an infinite loop
	  if the PPD file contained a keyword or text that was
	  too large for the buffer.
	- Added preliminary support for GNU TLS; patch provided
	  by Jeff Licquia.
	- Now timeout IPP attribute reads after 1 second inside
	  an attribute definition.
	- Now timeout connections that have been shutdown (due
	  to errors) after 30 seconds instead of the Timeout
	  setting (300 seconds by default).  This provides
	  faster recovery from DoS attacks.
	- A denial-of-service attack warning message was being
	  written to the log files by the scheduler for every
	  detection.  This caused a DoS of its own in some
	  situations. The warning message is now written no more
	  than once per minute.
	- Fixed the CIE colorspace support code in the image and
	  PS RIPs.
	- The job-quota-period, job-page-limit, and job-k-limit
	  attributes were not flagged as integers, so setting
	  quotas would not work.
	- Added an additional response check in the scheduler to
	  more quickly recover from denial-of-service attacks.
	- The cupstestppd file was incorrectly installed in the
	  /usr/sbin directory instead of /usr/bin.
	- The EPM list file did not include the cupstestppd
	  program or man page files.


CHANGES IN CUPS V1.1.18

	- Fixed a bug in the Set-Job-Attributes code in the
	  scheduler that would cause it to crash or continuously
	  write a job control file.
	- SECURITY FIX: The scheduler now provides a FileDevice
	  directive to control whether new printers can be added
	  using device URIs of the form "file:/filename".  The
	  default is to not allow printers with these device
	  URIs.
	- The scheduler did not compute the cost of filters